// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScrollableSection should render its default content 1`] = `
<div
  id="scrollable-wrapper"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "flex": "1 1 auto",
    }
  }
>
  <Scrollbars
    autoHeight={false}
    autoHeightMax={200}
    autoHeightMin={0}
    autoHide={false}
    autoHideDuration={200}
    autoHideTimeout={1000}
    hideTracksWhenNotNeeded={false}
    onScroll={[Function]}
    renderThumbHorizontal={[Function]}
    renderThumbVertical={[Function]}
    renderTrackHorizontal={[Function]}
    renderTrackVertical={[Function]}
    renderView={[Function]}
    tagName="div"
    thumbMinSize={30}
    universal={false}
  />
</div>
`;

exports[`ScrollableSection should render the given columns 1`] = `
<div
  id="scrollable-wrapper"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "flex": "1 1 auto",
    }
  }
>
  <Scrollbars
    autoHeight={false}
    autoHeightMax={200}
    autoHeightMin={0}
    autoHide={false}
    autoHideDuration={200}
    autoHideTimeout={1000}
    hideTracksWhenNotNeeded={false}
    onScroll={[Function]}
    renderThumbHorizontal={[Function]}
    renderThumbVertical={[Function]}
    renderTrackHorizontal={[Function]}
    renderTrackVertical={[Function]}
    renderView={[Function]}
    tagName="div"
    thumbMinSize={30}
    universal={false}
  >
    <React.Fragment
      key="scrollSection-0"
    >
      <ScrollSyncColumn
        className=""
        dataKey="a"
        key="a"
        width="150px"
      >
        Column A
      </ScrollSyncColumn>
    </React.Fragment>
    <React.Fragment
      key="scrollSection-1"
    >
      <ScrollSyncColumn
        className=""
        dataKey="b"
        key="b"
        width="150px"
      >
        Column B
      </ScrollSyncColumn>
    </React.Fragment>
  </Scrollbars>
</div>
`;
